--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </p>
         <p>
             Günümüzdeki hemen hemen her genç gibi ben de sıkı bir sosyal medya kullanıcısıyım ancak tercihimi daha çok
-            bilim, teknoloji ve spor alanındaki içerek üreten kanallardan yana kullanıyorum. Aslında birçok gelişmeyi bu
+            bilim, teknoloji ve spor alanındaki içerik üreten kanallardan yana kullanıyorum. Aslında birçok gelişmeyi bu
             kanallar aracılığıyla takip ediyorum diyebilirim. Bu kanallardan edindiğim ön bilgiler iyi bir araştırma ile
             paylaşıma açık bir hâle geliyor. Bilgi ve deneyimlerimi insanlara aktarmaktan keyif alıyorum. Her türlü soru
             ve görüşlerinizi benimle paylaşabilirsiniz bu arada hesaplarımı da takip etmeyi unutmayın &#128516
