--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
         <ul class="list-group-flush navbar-nav icons" style="position:absolute; bottom: 0px; right: 10px">
             <li class="nav-item px-2"><a href="https://www.linkedin.com/in/ahmet-celik-382006175/" target="_blank" class="nav-link zmdi zmdi-linkedin"></a></li>
-            <li class="nav-item px-2"><a href="https://github.com/amdhst" target="_blank" class="nav-link zmdi zmdi-github"></a></li>
+            <li class="nav-item px-2"><a href="https://github.com/ahm3tcelik" target="_blank" class="nav-link zmdi zmdi-github"></a></li>
             <li class="nav-item px-2"><a href="https://twitter.com/ahm3tcelik72" target="_blank" class="nav-link zmdi zmdi-twitter"></a></li>
             <li class="nav-item px-2"><a href="mailto:ahm3tcelik72@gmail.com" target="_blank" class="nav-link zmdi zmdi-email"></a></li>
             <li class="nav-item px-2"><a href="https://play.google.com/store/apps/dev?id=6778307173835557522" target="_blank" class="nav-link zmdi zmdi-google-play"></a></li>
@@ -56,7 +56,7 @@
             eklentileri geliştirerek başladı. O yaşlarda edindiğim hobi, bugün bu bölümü seçmemde en önemli etken oldu.
             Şu an için hobi olarak android mobil uygulama ağırlıklı çeşitli projeler geliştirip
             <a href="https://play.google.com/store/apps/dev?id=6778307173835557522" class="link">Google Play Store</a> ve
-            <a href="https://github.com/amdhst" class="link">Github</a> 'ta yayımlıyorum.
+            <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum.
         </p>
         <p>
             Günümüzdeki hemen hemen her genç gibi ben de sıkı bir sosyal medya kullanıcısıyım ancak tercihimi daha çok
