--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Ahmet ÇELİK"/>
-    <meta name="description" content="Software Engineering Student"/>
+    <meta name="robots" content="index, follow">
+    <meta name="title" content="Ahmet ÇELİK | Yazılım ve Teknoloji" />
+    <meta name="description" content="Android mobil uygulama geliştirici, java hayranı, flutter meraklısı ve yazılım trendleriyle ilgili özgür bir yazılımcı." />
     <meta name="keyword" content="ahmet çelik, yazılım, yazılım mühendisliği"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8">
+    <meta name="language" content="Turkish">
+    <meta property="og:title" content="Ahmet ÇELİK | Yazılım ve Teknoloji">
+    <meta property="og:description" content="Android mobil uygulama geliştirici, java hayranı, flutter meraklısı ve yazılım trendleriyle ilgili özgür bir yazılımcı.">
+    <meta property="og:image" content="https://github.com/ahm3tcelik/ahm3tcelik.github.io/blob/master/img/img.png">
+    <meta property="og:url" content="https://ahm3tcelik.github.io">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Optional JavaScript -->
@@ -23,7 +31,7 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-    <title>Ahmet ÇELİK</title>
+    <title>Ahmet ÇELİK - Kişisel Web Sitesi</title>
 </head>
 <body>
 <canvas id="simulator"></canvas>
@@ -56,7 +64,8 @@
             eklentileri geliştirerek başladı. O yaşlarda edindiğim hobi, bugün bu bölümü seçmemde en önemli etken oldu.
             Şu an için hobi olarak android mobil uygulama ağırlıklı çeşitli projeler geliştirip
             <a href="https://play.google.com/store/apps/dev?id=6778307173835557522" class="link">Google Play Store</a> ve
-            <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum.
+            <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum. Daha çok kendi kendime 
+            öğrenme eğiliminde olduğumdan, yazılım dünyasındaki yeni teknolojileri yakından takip ediyor ve pratiğe dökebiliyorum. 
         </p>
         <p>
             Günümüzdeki hemen hemen her genç gibi ben de sıkı bir sosyal medya kullanıcısıyım ancak tercihimi daha çok
