--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Ahmet ÇELİK"/>
-    <meta name="description" content="Software Engineering Student"/>
+    <meta name="robots" content="index, follow">
+    <meta name="title" content="Ahmet ÇELİK | Yazılım ve Teknoloji" />
+    <meta name="description" content="Android mobil uygulama geliştirici, java hayranı, flutter meraklısı ve yazılım trendleriyle ilgili özgür bir yazılımcı." />
     <meta name="keyword" content="ahmet çelik, yazılım, yazılım mühendisliği"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8">
+    <meta name="language" content="Turkish">
+    <meta property="og:title" content="Ahmet ÇELİK | Yazılım ve Teknoloji">
+    <meta property="og:description" content="Android mobil uygulama geliştirici, java hayranı, flutter meraklısı ve yazılım trendleriyle ilgili özgür bir yazılımcı.">
+    <meta property="og:image" content="https://github.com/ahm3tcelik/ahm3tcelik.github.io/blob/master/img/img.png">
+    <meta property="og:url" content="https://ahm3tcelik.github.io">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" rel="stylesheet">
