--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div style="border-right: 1px solid #018786; position: fixed; width: 35%;" class="h-100">
     <div class="pt-3 px-3">
         <ul class="text-right navbar-nav">
-            <li class="nav-item mb-4"><a href="#"><img src="img/pp.jpg" class="img-fluid rounded-circle" style="max-width: 100px;"></a> </a> </li>
+            <li class="nav-item mb-4"><a href="#"><img src="img/pp.jpg" alt="Ahmet Çelik Software Enngineering Student" class="img-fluid rounded-circle" style="max-width: 100px;"></a> </a> </li>
             <li class="nav-item active"><a href="#" class="nav-link"><h6 class="px-1 my-1 text-light"> HAKKIMDA </h6></a></li>
             <li class="nav-item"><a href="projects.html" class="nav-link"><h6 class="px-1 my-1"> PROJELER </h6></a></li>
         </ul>
