--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
     <!-- Projeler { -->
     <section class="p-3">
         <article>
-            <h6>Gymcim <span class="badge badge-primary">PHP</span> <span class="badge badge-danger">MySQL</span></h6>
+            <h6><a class="linkP" href="https://gymcim.ersagbatman.com">Gymcim </a><span class="badge badge-primary">PHP</span> <span class="badge badge-danger">MySQL</span></h6>
             <small class="text-muted">Web Site</small>
             <p>
                 Gymcim projesi, kendi çatısı altındaki tüm spor salonu yöneticileri ile spor salonu müşterileri arasında
