social text added

--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,28 @@
     <!-- Projeler { -->
     <section class="p-3">
         <article>
+            <h6><a class="linkP" href="https://github.com/ahm3tcelik/SocialText">Social Text</a>
+                <span class="badge badge-primary">Futter</span>
+                <span class="badge badge-danger">Firebase</span>
+            </h6>
+            <small class="text-muted">Flutter (Android & IOS) Cross Platform App</small>
+            <p>
+                Social Text, kullanıcıların istediği sözleri paylaşabileceği ve gerçek zamanlı sohbet edebileceği bir mobil uygulamadır. 
+            </p>
+            Özellikler
+            <ul>
+                <li>Firebase Cloud Firestore, Firebase Storage ve Firebase Authentication'un senkronize çalıştırılması</li>
+                <li>Firebase CRUD İşlemleri</li>
+                <li>Gerçek Zamanlı Sohbet</li>
+                <li>Çoklu Dil Desteği</li>
+            </ul>
+            <div>
+                <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/4D7TfZ1EenA">
+                </iframe>
+            </div>
+        </article>
+        <article>
             <h6><a class="linkP" href="https://gymcim.ersagbatman.com">Gymcim </a><span class="badge badge-primary">PHP</span> <span class="badge badge-danger">MySQL</span></h6>
             <small class="text-muted">Web Site</small>
             <p>
