--- a/projects.html
+++ b/projects.html
@@ -91,8 +91,8 @@
                 <li>Gerçek Zamanlı Sohbet</li>
                 <li>Çoklu Dil Desteği</li>
             </ul>
-            <div>
-                <iframe width="420" height="315"
+            <div class="img-thumbnail rounded">
+                <iframe width="350" height="275"
                 src="https://www.youtube.com/embed/4D7TfZ1EenA">
                 </iframe>
             </div>
