--- a/index.html
+++ b/index.html
@@ -56,16 +56,21 @@
         <p>AHMET ÇELİK</p>
     </div>
     <div class="col-12" style="border-bottom: 1px solid #018786"></div>
-    <div class="p-3">
+    <p class="pl-3 py-3">
+        <span class="badge badge-primary">Flutter</span>
+        <span class="badge badge-danger">Android Native (Java)</span>
+        <span class="badge badge-success">Vue.js</span>
+    </p>
+    <div class="px-3 py-1">
         <h1>HELLO WORLD!</h1>
-        <p>
+        <p class="text-justify">
             Merhaba, ben <strong>Ahmet Çelik</strong>. 2001 yılında Batman'da doğdum. Hâlihazırda Kırklareli Üniversitesi
             Yazılım Mühendisliği bölümünde eğitim görmekteyim. Yazılım dünyasına girişim henüz 13-14 yaşlarında oyun
             eklentileri geliştirerek başladı. O yaşlarda edindiğim hobi, bugün bu bölümü seçmemde en önemli etken oldu.
-            Şu an için hobi olarak android mobil uygulama ağırlıklı çeşitli projeler geliştirip
+            Şu an için hobi olarak mobil uygulama ve website ağırlıklı çeşitli projeler geliştirip
             <a href="https://play.google.com/store/apps/dev?id=6778307173835557522" class="link">Google Play Store</a> ve
-            <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum. Daha çok kendi kendime 
-            öğrenme eğiliminde olduğumdan, yazılım dünyasındaki yeni teknolojileri yakından takip ediyor ve pratiğe dökebiliyorum. 
+            <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum. <strong>Mobil platformlar
+            için Flutter ve Java; Web için ise Vue.js frameworkünü kullanıyorum.</strong>
         </p>
         <p>
             Günümüzdeki hemen hemen her genç gibi ben de sıkı bir sosyal medya kullanıcısıyım ancak tercihimi daha çok
