--- a/projects.html
+++ b/projects.html
@@ -76,8 +76,12 @@
     <!-- Projeler { -->
     <section class="p-3">
         <article>
-            <h6><a class="linkP" href="https://github.com/ahm3tcelik/SocialText">Social Text</a>
-                <span class="badge badge-primary">Futter</span>
+            <h6>
+                <a class="linkP" target="_blank" href="https://github.com/ahm3tcelik/SocialText">
+                    Social Text
+                    <i class="zmdi zmdi-open-in-new"></i>
+                </a>
+                <span class="badge badge-primary">Flutter</span>
                 <span class="badge badge-danger">Firebase</span>
             </h6>
             <small class="text-muted">Flutter (Android & IOS) Cross Platform App</small>
@@ -98,7 +102,12 @@
             </div>
         </article>
         <article>
-            <h6><a class="linkP" href="https://gymcim.ersagbatman.com">Gymcim </a><span class="badge badge-primary">PHP</span> <span class="badge badge-danger">MySQL</span></h6>
+            <h6>
+                <a class="linkP" target="_blank" href="https://gymcim.ersagbatman.com">
+                Gymcim <i class="zmdi zmdi-open-in-new"></i>
+                </a>
+                <span class="badge badge-primary">PHP</span> <span class="badge badge-danger">MySQL</span>
+            </h6>
             <small class="text-muted">Web Site</small>
             <p>
                 Gymcim projesi, kendi çatısı altındaki tüm spor salonu yöneticileri ile spor salonu müşterileri arasında
@@ -132,8 +141,8 @@
             </div>
         </article>
         <article>
-            <h6><a class="linkP" href="https://play.google.com/store/apps/details?id=com.ahmetc.yazimkurallari">
-                Doğrusu Nasıl Yazılır</a>
+            <h6><a class="linkP" target="_blank" href="https://play.google.com/store/apps/details?id=com.ahmetc.yazimkurallari">
+                Doğrusu Nasıl Yazılır <i class="zmdi zmdi-open-in-new"></i></a>
                 <span class="badge badge-primary">PHP</span>
                 <span class="badge badge-success">Java</span>
                 <span class="badge badge-danger">MySQL</span>
@@ -166,7 +175,10 @@
             </div>
         </article>
         <article>
-            <h6><a class="linkP" href="https://play.google.com/store/apps/details?id=com.ahmetc.ezbergec">Ezbergeç</a>
+            <h6>
+                <a class="linkP" target="_blank" href="https://play.google.com/store/apps/details?id=com.ahmetc.ezbergec">
+                Ezbergeç <i class="zmdi zmdi-open-in-new"></i>
+                 </a>
                 <span class="badge badge-success">Java</span>
                 <span class="badge badge-dark">SQLite</span>
             </h6>
@@ -196,7 +208,10 @@
             </div>
         </article>
         <article>
-            <h6><a class="linkP" href="https://play.google.com/store/apps/details?id=com.ahmetc.subconsciousmanager">Bilinçaltı Yöneticisi</a>
+            <h6>
+                <a class="linkP" target="_blank" href="https://play.google.com/store/apps/details?id=com.ahmetc.subconsciousmanager">
+                Bilinçaltı Yöneticisi <i class="zmdi zmdi-open-in-new"></i>
+                </a>
                 <span class="badge badge-success">Java</span>
                 <span class="badge badge-dark">SQLite</span>
             </h6>
@@ -223,7 +238,10 @@
             </div>
         </article>
         <article>
-            <h6><a class="linkP" href="https://play.google.com/store/apps/details?id=com.ahmetc.islemibul">İşlemi Bul</a>
+            <h6>
+                <a class="linkP" target="_blank" href="https://play.google.com/store/apps/details?id=com.ahmetc.islemibul">
+                İşlemi Bul <i class="zmdi zmdi-open-in-new"></i>
+                </a>
                 <span class="badge badge-success">Java</span>
             </h6>
             <small class="text-muted">Android Native App</small>
