--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,13 +16,14 @@
     <meta property="og:image" content="https://github.com/ahm3tcelik/ahm3tcelik.github.io/blob/master/img/img.png">
     <meta property="og:url" content="https://ahm3tcelik.github.io">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" rel="stylesheet">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
@@ -65,6 +66,7 @@
             <li class="nav-item px-2"><a href="https://twitter.com/ahm3tcelik72" target="_blank" class="nav-link zmdi zmdi-twitter"></a></li>
             <li class="nav-item px-2"><a href="mailto:ahm3tcelik72@gmail.com" target="_blank" class="nav-link zmdi zmdi-email"></a></li>
             <li class="nav-item px-2"><a href="https://play.google.com/store/apps/dev?id=6778307173835557522" target="_blank" class="nav-link zmdi zmdi-google-play"></a></li>
+            <li class="nav-item px-2"><a href="https://youtube.com/c/AmadDhst" target="_blank" class="nav-link zmdi zmdi-youtube-play"></a></li>
         </ul>
     </div>
 </div>
@@ -75,6 +77,36 @@
     <div class="col-12" style="border-bottom: 1px solid #018786"></div>
     <!-- Projeler { -->
     <section class="p-3">
+        <article>
+            <h6>
+                <a class="linkP" target="_blank" href="https://flutdpy.herokuapp.com/">
+                    Flutdupy
+                    <i class="zmdi zmdi-open-in-new"></i>
+                </a>
+                <span class="badge badge-secondary">Node.js</span>
+                <span class="badge badge-success">Vue.js</span>
+                <span class="badge badge-primary">Flutter</span>
+            </h6>
+            <small class="text-muted">Flutter (Android & IOS) App Builder - Duplicator</small>
+            <p>
+                Flutdupy ile siteye daha önceden yüklenmiş şablon uygulamalar üzerinde değişiklikler yaparak hiç kod yazmadan hem android hem ios mobil uygulama geliştirebilirsiniz.  
+            </p>
+            Değiştirilebilen Özellikler
+            <ul>
+                <li>Uygulama Adı</li>
+                <li>Uygulam Paket ID</li>
+                <li>Uygulama Versiyonu</li>
+                <li>Başlangıç Iconu</li>
+                <li>Splash Resmi</li>
+                <li>Admob Ayarları</li>
+                <li>Uygulama içi Yazılar ve Temalar</li>
+            </ul>
+            <div class="rounded">
+                <iframe width="350" height="275" allowfullscreen="allowfullscreen"
+                src="https://www.youtube.com/embed/p0cm0rod9do">
+                </iframe>
+            </div>
+        </article>
         <article>
             <h6>
                 <a class="linkP" target="_blank" href="https://github.com/ahm3tcelik/SocialText">
@@ -95,8 +127,8 @@
                 <li>Gerçek Zamanlı Sohbet</li>
                 <li>Çoklu Dil Desteği</li>
             </ul>
-            <div class="img-thumbnail rounded">
-                <iframe width="350" height="275"
+            <div class="rounded">
+                <iframe width="350" height="275" allowfullscreen="allowfullscreen"
                 src="https://www.youtube.com/embed/4D7TfZ1EenA">
                 </iframe>
             </div>
