--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,12 +16,13 @@
     <meta property="og:image" content="https://github.com/ahm3tcelik/ahm3tcelik.github.io/blob/master/img/img.png">
     <meta property="og:url" content="https://ahm3tcelik.github.io">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Fonts -->
@@ -48,6 +49,7 @@
             <li class="nav-item px-2"><a href="https://twitter.com/ahm3tcelik72" target="_blank" class="nav-link zmdi zmdi-twitter"></a></li>
             <li class="nav-item px-2"><a href="mailto:ahm3tcelik72@gmail.com" target="_blank" class="nav-link zmdi zmdi-email"></a></li>
             <li class="nav-item px-2"><a href="https://play.google.com/store/apps/dev?id=6778307173835557522" target="_blank" class="nav-link zmdi zmdi-google-play"></a></li>
+            <li class="nav-item px-2"><a href="https://youtube.com/c/AmadDhst" target="_blank" class="nav-link zmdi zmdi-youtube-play"></a></li>
         </ul>
     </div>
 </div>
@@ -56,11 +58,6 @@
         <p>AHMET ÇELİK</p>
     </div>
     <div class="col-12" style="border-bottom: 1px solid #018786"></div>
-    <p class="pl-3 py-3">
-        <span class="badge badge-primary">Flutter</span>
-        <span class="badge badge-danger">Android Native (Java)</span>
-        <span class="badge badge-success">Vue.js</span>
-    </p>
     <div class="px-3 py-1">
         <h1>HELLO WORLD!</h1>
         <p>
@@ -86,7 +83,113 @@
             <a class="badge badge-secondary" href="mailto:ahm3tcelik72@gmail.com"><span class="zmdi zmdi-email"></span> ahm3tcelik72@gmail.com</a>
         </p>
     </div>
+    <hr style="border: 1px solid #018786;" />
+    <div class="px-3 py-1">
+        <h3>Yetenekler</h3>
+        <br />
+        <table class="table table-bordered skill-table">
+            <thead>
+                <tr>
+                    <th>Alan</th>
+                    <th>Deneyim</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Native Mobil Uygulama Geliştirme (Android - Java)</td>
+                    <td>1,5+ Yıl</td>
+                </tr>
+                <tr>
+                    <td>Cross Platform Mobil Uygulama Geliştirme (Android & IOS - Dart)</td>
+                    <td>6+ Ay</td>
+                </tr>
+                <tr>
+                    <td>Web Back End Geliştirme (Node.js - Javascript) </td>
+                    <td>3+ Ay</td>
+                </tr>
+                <tr>
+                    <td>Web Front End Geliştirme (Vue.Js - Javascript)</td>
+                    <td>2+ Ay</td>
+                </tr>
+                <tr>
+                    <td>Adobe Photoshop CC</td>
+                    <td>Orta Seviye</td>
+                </tr>
+                <tr>
+                    <td>Hızlı Yazma</td>
+                    <td>106 WPM (word per minute)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <hr style="border: 1px solid #018786;" />
+    <div class="px-3 py-1">
+        <h3>Sertifikalar</h3>
+        <br />
+        <table class="table table-bordered skill-table">
+            <thead>
+                <tr>
+                    <th>Sertifika Adı</th>
+                    <th>Sertifikayı Veren Kurum</th>
+                    <th>Alınma Tarihi</th>
+                    <th>Bağlantı</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Kotlin ile Android Mobil Uygulama Geliştirme Temel Seviye</td>
+                    <td>BTK Akademi</td>
+                    <td>19.09.2020</td>
+                    <td>
+                        <a target="_blank" href="https://vizyonergenc.com/file-server/cv/225132/kotlin-le-android-mobil-uygulama-geli-tirme-e-itimi-temel-seviye-certificatef_5f7265c8151956.33214833.pdf">
+                            kotlin_temel.pdf
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Google Flutter ile Mobil Uygulama Geliştirme Kursu</td>
+                    <td>BTK Akademi</td>
+                    <td>19.09.2020</td>
+                    <td>
+                        <a target="_blank" href="https://vizyonergenc.com/file-server/cv/225134/google-flutter-le-mobil-uygulama-kursu-certificatef_5f72661683d415.35849580.pdf">
+                            google_flutter.pdf
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>401: Node.js Başarı Belgesi</td>
+                    <td>Turkcell Geleceği Yazanlar</td>
+                    <td>05.09.2020</td>
+                    <td>
+                        <a target="_blank" href="https://gelecegiyazanlar.turkcell.com.tr/kisi/belge/amad/Web%20Programlama/401">
+                            401_nodejs.pdf
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Android Mobil Uygulama Geliştirme Eğitimi | Java | 2020</td>
+                    <td>Udemy - Kasım Adalan</td>
+                    <td>30.06.2020</td>
+                    <td>
+                        <a target="_blank" href="http://ude.my/UC-21dc60a1-19c4-417b-bf2e-8d59109108a2">
+                            android_java.pdf
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>İngilizce (B1-B2) Eğitimi</td>
+                    <td>İstanbul İşletme Enstitüsü</td>
+                    <td>25.08.2019</td>
+                    <td>
+                        <a target="_blank" href="https://www.iienstitu.com/sertifika-sorgulama/ogrenci/O6KOHAJWV">
+                            b1_b2.pdf
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
-<script src="js/waves.js" async></script>
+<script src="js/waves.js"></script>
 </body>
 </html>
