responsive design updated

--- a/index.html
+++ b/index.html
@@ -36,158 +36,162 @@
 </head>
 <body>
 <canvas id="simulator"></canvas>
-<div style="border-right: 1px solid #018786; position: fixed; width: 35%;" class="h-100">
-    <div class="pt-3 px-3">
-        <ul class="text-right navbar-nav">
-            <li class="nav-item mb-4"><a href="#"><img src="img/pp.jpg" alt="Ahmet Çelik Software Enngineering Student" class="img-fluid rounded-circle" style="max-width: 100px;"></a> </a> </li>
-            <li class="nav-item active"><a href="#" class="nav-link"><h6 class="px-1 my-1 text-light"> HAKKIMDA </h6></a></li>
-            <li class="nav-item"><a href="projects.html" class="nav-link"><h6 class="px-1 my-1"> PROJELER </h6></a></li>
-        </ul>
-        <ul class="list-group-flush navbar-nav icons" style="position:absolute; bottom: 0px; right: 10px">
-            <li class="nav-item px-2"><a href="https://www.linkedin.com/in/ahmet-celik-382006175/" target="_blank" class="nav-link zmdi zmdi-linkedin"></a></li>
-            <li class="nav-item px-2"><a href="https://github.com/ahm3tcelik" target="_blank" class="nav-link zmdi zmdi-github"></a></li>
-            <li class="nav-item px-2"><a href="https://twitter.com/ahm3tcelik72" target="_blank" class="nav-link zmdi zmdi-twitter"></a></li>
-            <li class="nav-item px-2"><a href="mailto:ahm3tcelik72@gmail.com" target="_blank" class="nav-link zmdi zmdi-email"></a></li>
-            <li class="nav-item px-2"><a href="https://play.google.com/store/apps/dev?id=6778307173835557522" target="_blank" class="nav-link zmdi zmdi-google-play"></a></li>
-            <li class="nav-item px-2"><a href="https://youtube.com/c/AmadDhst" target="_blank" class="nav-link zmdi zmdi-youtube-play"></a></li>
-        </ul>
+<div class="d-flex">
+    <div style="border-right: 1px solid #018786;">
+        <div class="flex-column d-flex align-items-stretch" style="position: sticky; left: 0px; top: 0px;">
+            <ul class="text-right navbar-nav pt-3 px-3">
+                <li class="nav-item mb-4"><a href="#"><img src="img/pp.jpg" alt="Ahmet Çelik Software Enngineering Student" class="img-fluid rounded-circle" style="max-width: 100px;"></a> </a> </li>
+                <li class="nav-item active"><a href="#" class="nav-link"><h6 class="px-1 my-1 text-light"> HAKKIMDA </h6></a></li>
+                <li class="nav-item"><a href="projects.html" class="nav-link"><h6 class="px-1 my-1"> PROJELER </h6></a></li>
+                <li class="nav-item"><a href="AhmetCelikCv.pdf" style="text-decoration: underline;" class="nav-link"><h6 class="px-1 my-1"> CV.pdf </h6></a></li>
+            </ul>
+            <ul class="list-group-flush navbar-nav icons px-3 align-items-end">
+                <li class="nav-item px-2"><a href="https://www.linkedin.com/in/ahmet-celik-382006175/" target="_blank" class="nav-link zmdi zmdi-linkedin"></a></li>
+                <li class="nav-item px-2"><a href="https://github.com/ahm3tcelik" target="_blank" class="nav-link zmdi zmdi-github"></a></li>
+                <li class="nav-item px-2"><a href="https://twitter.com/ahm3tcelik72" target="_blank" class="nav-link zmdi zmdi-twitter"></a></li>
+                <li class="nav-item px-2"><a href="mailto:ahm3tcelik72@gmail.com" target="_blank" class="nav-link zmdi zmdi-email"></a></li>
+                <li class="nav-item px-2"><a href="https://play.google.com/store/apps/dev?id=6778307173835557522" target="_blank" class="nav-link zmdi zmdi-google-play"></a></li>
+                <li class="nav-item px-2"><a href="https://youtube.com/c/AmadDhst" target="_blank" class="nav-link zmdi zmdi-youtube-play"></a></li>
+            </ul>
+        </div>
     </div>
-</div>
-<div style="position:absolute; left: 35%; width: 65%">
-    <div class="pl-3 py-3 typewriter col-sm-9 col-lg-3" style="border-bottom: 1px solid #018786;">
-        <p>AHMET ÇELİK</p>
-    </div>
-    <div class="col-12" style="border-bottom: 1px solid #018786"></div>
-    <div class="px-3 py-1">
-        <h1>HELLO WORLD!</h1>
-        <p>
-            Merhaba, ben <strong>Ahmet Çelik</strong>. 2001 yılında Batman'da doğdum. Hâlihazırda Kırklareli Üniversitesi
-            Yazılım Mühendisliği bölümünde eğitim görmekteyim. Yazılım dünyasına girişim henüz 13-14 yaşlarında oyun
-            eklentileri geliştirerek başladı. O yaşlarda edindiğim hobi, bugün bu bölümü seçmemde en önemli etken oldu.
-            Şu an için hobi olarak mobil uygulama ve website ağırlıklı çeşitli projeler geliştirip
-            <a href="https://play.google.com/store/apps/dev?id=6778307173835557522" class="link">Google Play Store</a> ve
-            <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum. <strong>Mobil platformlar
-            için Flutter ve Java; Web için ise Vue.js frameworkünü kullanıyorum.</strong>
-        </p>
-        <p>
-            Günümüzdeki hemen hemen her genç gibi ben de sıkı bir sosyal medya kullanıcısıyım ancak tercihimi daha çok
-            bilim, teknoloji ve spor alanındaki içerik üreten kanallardan yana kullanıyorum. Aslında birçok gelişmeyi bu
-            kanallar aracılığıyla takip ediyorum diyebilirim. Bu kanallardan edindiğim ön bilgiler iyi bir araştırma ile
-            paylaşıma açık bir hâle geliyor. Bilgi ve deneyimlerimi insanlara aktarmaktan keyif alıyorum. Her türlü soru
-            ve görüşlerinizi benimle paylaşabilirsiniz bu arada hesaplarımı da takip etmeyi unutmayın &#128516
-        </p>
-        <p>
-            <a class="badge badge-info" href="https://www.linkedin.com/in/ahmet-celik-382006175/" target="_blank"><span class="zmdi zmdi-linkedin"></span> ahmet-celik-382006175</a>
-            <a class="badge badge-danger" href="https://www.instagram.com/ahm3tcelik" target="_blank"><span class="zmdi zmdi-instagram"></span> ahm3tcelik</a>
-            <a class="badge badge-primary" href="https://twitter.com/ahm3tcelik72" target="_blank"><span class="zmdi zmdi-twitter"></span> ahm3tcelik72</a>
-            <a class="badge badge-secondary" href="mailto:ahm3tcelik72@gmail.com"><span class="zmdi zmdi-email"></span> ahm3tcelik72@gmail.com</a>
-        </p>
-    </div>
-    <hr style="border: 1px solid #018786;" />
-    <div class="px-3 py-1">
-        <h3>Yetenekler</h3>
-        <br />
-        <table class="table table-bordered skill-table">
-            <thead>
-                <tr>
-                    <th>Alan</th>
-                    <th>Deneyim</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Native Mobil Uygulama Geliştirme (Android - Java)</td>
-                    <td>1,5+ Yıl</td>
-                </tr>
-                <tr>
-                    <td>Cross Platform Mobil Uygulama Geliştirme (Android & IOS - Dart)</td>
-                    <td>6+ Ay</td>
-                </tr>
-                <tr>
-                    <td>Web Back End Geliştirme (Node.js - Javascript) </td>
-                    <td>3+ Ay</td>
-                </tr>
-                <tr>
-                    <td>Web Front End Geliştirme (Vue.Js - Javascript)</td>
-                    <td>2+ Ay</td>
-                </tr>
-                <tr>
-                    <td>Adobe Photoshop CC</td>
-                    <td>Orta Seviye</td>
-                </tr>
-                <tr>
-                    <td>Hızlı Yazma</td>
-                    <td>106 WPM (word per minute)</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <hr style="border: 1px solid #018786;" />
-    <div class="px-3 py-1">
-        <h3>Sertifikalar</h3>
-        <br />
-        <table class="table table-bordered skill-table">
-            <thead>
-                <tr>
-                    <th>Sertifika Adı</th>
-                    <th>Sertifikayı Veren Kurum</th>
-                    <th>Alınma Tarihi</th>
-                    <th>Bağlantı</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Kotlin ile Android Mobil Uygulama Geliştirme Temel Seviye</td>
-                    <td>BTK Akademi</td>
-                    <td>19.09.2020</td>
-                    <td>
-                        <a target="_blank" href="https://vizyonergenc.com/file-server/cv/225132/kotlin-le-android-mobil-uygulama-geli-tirme-e-itimi-temel-seviye-certificatef_5f7265c8151956.33214833.pdf">
-                            kotlin_temel.pdf
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Google Flutter ile Mobil Uygulama Geliştirme Kursu</td>
-                    <td>BTK Akademi</td>
-                    <td>19.09.2020</td>
-                    <td>
-                        <a target="_blank" href="https://vizyonergenc.com/file-server/cv/225134/google-flutter-le-mobil-uygulama-kursu-certificatef_5f72661683d415.35849580.pdf">
-                            google_flutter.pdf
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>401: Node.js Başarı Belgesi</td>
-                    <td>Turkcell Geleceği Yazanlar</td>
-                    <td>05.09.2020</td>
-                    <td>
-                        <a target="_blank" href="https://gelecegiyazanlar.turkcell.com.tr/kisi/belge/amad/Web%20Programlama/401">
-                            401_nodejs.pdf
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Android Mobil Uygulama Geliştirme Eğitimi | Java | 2020</td>
-                    <td>Udemy - Kasım Adalan</td>
-                    <td>30.06.2020</td>
-                    <td>
-                        <a target="_blank" href="http://ude.my/UC-21dc60a1-19c4-417b-bf2e-8d59109108a2">
-                            android_java.pdf
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>İngilizce (B1-B2) Eğitimi</td>
-                    <td>İstanbul İşletme Enstitüsü</td>
-                    <td>25.08.2019</td>
-                    <td>
-                        <a target="_blank" href="https://www.iienstitu.com/sertifika-sorgulama/ogrenci/O6KOHAJWV">
-                            b1_b2.pdf
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="flex-grow-1">
+        <div class="pl-3 py-3 typewriter col-sm-9 col-lg-3" style="border-bottom: 1px solid #018786;">
+            <p>AHMET ÇELİK</p>
+        </div>
+        <div class="col-12" style="border-bottom: 1px solid #018786"></div>
+        <div class="px-3 py-1">
+            <h1>HELLO WORLD!</h1>
+            <p>
+                Merhaba, ben <strong>Ahmet Çelik</strong>. 2001 yılında Batman'da doğdum. Hâlihazırda Kırklareli Üniversitesi
+                Yazılım Mühendisliği bölümünde eğitim görmekteyim. Yazılım dünyasına girişim henüz 13-14 yaşlarında oyun
+                eklentileri geliştirerek başladı. O yaşlarda edindiğim hobi, bugün bu bölümü seçmemde en önemli etken oldu.
+                Şu an için hobi olarak mobil uygulama ve website ağırlıklı çeşitli projeler geliştirip
+                <a href="https://play.google.com/store/apps/dev?id=6778307173835557522" class="link">Google Play Store</a> ve
+                <a href="https://github.com/ahm3tcelik" class="link">Github</a> 'ta yayımlıyorum. <strong>Mobil platformlar
+                için Flutter ve Java; Web için ise Vue.js frameworkünü kullanıyorum.</strong>
+            </p>
+            <p>
+                Günümüzdeki hemen hemen her genç gibi ben de sıkı bir sosyal medya kullanıcısıyım ancak tercihimi daha çok
+                bilim, teknoloji ve spor alanındaki içerik üreten kanallardan yana kullanıyorum. Aslında birçok gelişmeyi bu
+                kanallar aracılığıyla takip ediyorum diyebilirim. Bu kanallardan edindiğim ön bilgiler iyi bir araştırma ile
+                paylaşıma açık bir hâle geliyor. Bilgi ve deneyimlerimi insanlara aktarmaktan keyif alıyorum. Her türlü soru
+                ve görüşlerinizi benimle paylaşabilirsiniz bu arada hesaplarımı da takip etmeyi unutmayın &#128516
+            </p>
+            <p>
+                <a class="badge badge-info" href="https://www.linkedin.com/in/ahmet-celik-382006175/" target="_blank"><span class="zmdi zmdi-linkedin"></span> ahmet-celik-382006175</a>
+                <a class="badge badge-danger" href="https://www.instagram.com/ahm3tcelik" target="_blank"><span class="zmdi zmdi-instagram"></span> ahm3tcelik</a>
+                <a class="badge badge-primary" href="https://twitter.com/ahm3tcelik72" target="_blank"><span class="zmdi zmdi-twitter"></span> ahm3tcelik72</a>
+                <a class="badge badge-secondary" href="mailto:ahm3tcelik72@gmail.com"><span class="zmdi zmdi-email"></span> ahm3tcelik72@gmail.com</a>
+            </p>
+        </div>
+        <hr style="border: 1px solid #018786;" />
+
+        <div class="px-3 py-1">
+            <h3>Yetenekler</h3>
+            <br />
+            <table class="table table-bordered skill-table">
+                <thead>
+                    <tr>
+                        <th>Alan</th>
+                        <th>Deneyim</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Native Mobil Uygulama Geliştirme (Android - Java)</td>
+                        <td>1,5+ Yıl</td>
+                    </tr>
+                    <tr>
+                        <td>Cross Platform Mobil Uygulama Geliştirme (Android & IOS - Dart)</td>
+                        <td>6+ Ay</td>
+                    </tr>
+                    <tr>
+                        <td>Web Back End Geliştirme (Node.js - Javascript) </td>
+                        <td>3+ Ay</td>
+                    </tr>
+                    <tr>
+                        <td>Web Front End Geliştirme (Vue.Js - Javascript)</td>
+                        <td>2+ Ay</td>
+                    </tr>
+                    <tr>
+                        <td>Adobe Photoshop CC</td>
+                        <td>Orta Seviye</td>
+                    </tr>
+                    <tr>
+                        <td>Hızlı Yazma</td>
+                        <td>106 WPM (word per minute)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <hr style="border: 1px solid #018786;" />
+        <div class="px-3 py-1">
+            <h3>Sertifikalar</h3>
+            <br />
+            <table class="table table-bordered skill-table">
+                <thead>
+                    <tr>
+                        <th>Sertifika Adı</th>
+                        <th>Sertifikayı Veren Kurum</th>
+                        <th>Alınma Tarihi</th>
+                        <th>Bağlantı</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kotlin ile Android Mobil Uygulama Geliştirme Temel Seviye</td>
+                        <td>BTK Akademi</td>
+                        <td>19.09.2020</td>
+                        <td>
+                            <a target="_blank" href="https://vizyonergenc.com/file-server/cv/225132/kotlin-le-android-mobil-uygulama-geli-tirme-e-itimi-temel-seviye-certificatef_5f7265c8151956.33214833.pdf">
+                                kotlin_temel.pdf
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Google Flutter ile Mobil Uygulama Geliştirme Kursu</td>
+                        <td>BTK Akademi</td>
+                        <td>19.09.2020</td>
+                        <td>
+                            <a target="_blank" href="https://vizyonergenc.com/file-server/cv/225134/google-flutter-le-mobil-uygulama-kursu-certificatef_5f72661683d415.35849580.pdf">
+                                google_flutter.pdf
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>401: Node.js Başarı Belgesi</td>
+                        <td>Turkcell Geleceği Yazanlar</td>
+                        <td>05.09.2020</td>
+                        <td>
+                            <a target="_blank" href="https://gelecegiyazanlar.turkcell.com.tr/kisi/belge/amad/Web%20Programlama/401">
+                                401_nodejs.pdf
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Android Mobil Uygulama Geliştirme Eğitimi | Java | 2020</td>
+                        <td>Udemy - Kasım Adalan</td>
+                        <td>30.06.2020</td>
+                        <td>
+                            <a target="_blank" href="http://ude.my/UC-21dc60a1-19c4-417b-bf2e-8d59109108a2">
+                                android_java.pdf
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>İngilizce (B1-B2) Eğitimi</td>
+                        <td>İstanbul İşletme Enstitüsü</td>
+                        <td>25.08.2019</td>
+                        <td>
+                            <a target="_blank" href="https://www.iienstitu.com/sertifika-sorgulama/ogrenci/O6KOHAJWV">
+                                b1_b2.pdf
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 <script src="js/waves.js"></script>
